# pallet-spaces

./: AGENTS.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  todo.md
backend/src/: appstate.rs  error.rs  main.rs  signup.rs
backend/src/controller/: mod.rs  signup.rs
backend/src/model/: database.rs  mod.rs  posts.rs  users.rs
backend/src/pages/: signup.rs  utils.rs
backend/src/plugins/: mod.rs  orders.rs  posts.rs  users.rs
backend/src/views/: home.rs  mod.rs  signup.rs  utils.rs
frontend/: htmxform.html  index.html  index.ts  signup.html  style.css  tsconfig.json
frontend/assets/: index.html  signup.html
frontend/public/css/: main.css
src/: appstate.rs  main.rs  signup.rs
