[package]
name = "pallet-spaces"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
