[package]
name = "pallet-spaces"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros", "tracing"] }
axum-login = "0.17.0"
maud = { version = "0.27.0", features = ["axum"] }
password-auth = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2.1.3"
dotenvy = "0.15"

[features]
default = []
# Enable real Shopify HTTP integration (requires network + reqwest)
shopify = ["dep:reqwest"]
# Enable real Stripe HTTP integration via async-stripe
stripe = ["dep:async-stripe"]
# Opt-in live Stripe tests (use with `--features stripe,stripe_live`)
stripe_live = []
# Enable Maps/geocoding integration (requires reqwest). Off by default.
maps = ["dep:reqwest"]
maps_live = []

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
optional = true

[dependencies.async-stripe]
version = "0.38"
optional = true
features = ["runtime-tokio-hyper-rustls", "full"]

[dev-dependencies]
tower = "0.5"
nanoid = "0.4"
